--- a/index.html
+++ b/index.html
@@ -250,5 +250,6 @@
             </div>
         </div>
     </footer>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
