--- a/index.html
+++ b/index.html
@@ -115,126 +115,114 @@
         </div>
       </div>
     </section>
-    <section class="course-list">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-12">
-                    <div class="text-center py-3 icon-container">
-                        <img src="images/icon-1.png" alt="book icon">
-                        <h4 class="icon-title">1500+ Topic</h4>
-                        <p>Learn Anythings</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <div class="text-center py-3 icon-container">
-                        <img src="images/icon-2.png" alt="book icon">
-                        <h4 class="icon-title">1800+ Students</h4>
-                        <p>Learn Anythings</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <div class="text-center py-3 icon-container active">
-                        <img src="images/icon-3.png" alt="book icon">
-                        <h4 class="icon-title">9K+ Test Token</h4>
-                        <p>Learn Anythings</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <div class="text-center py-3 icon-container">
-                        <img src="images/icon-4.png" alt="book icon">
-                        <h4 class="icon-title">2000+ Student</h4>
-                        <p>Learn Anythings</p>
-                    </div>
-                </div>
+    <section class="course">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <div class="c_title text-center">
+              <h1 class="c_h1">Online courses</h1>
             </div>
+          </div>
         </div>
-    </section>
-    <section class="courses py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="card shadow p-3 mb-5 bg-body rounded">
-                      <img src="images/course-1.png" class="card-img-top" alt="Course one">
-                      <div class="card-body ps-0">
-                        <h4>Modern Psychology</h4>
-                        <p class="card-text">Designation</p>
-                        <button class="btn green_btn">Buy Course</button>
-                      </div>
-                      <div class="card-footer ps-0 border-0 bg-white">
-                        <div class="d-flex justify-content-between">
-                            <div class="left-content d-flex">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewBox="0 0 16 16">
-                                  <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
-                                  <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-                                </svg>
-                                <p class="mb-0 ms-2">Start 20  April, 2021</p>
-                            </div>
-                            <div class="right-content d-flex">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
-                                  <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
-                                </svg>
-                                <p class="mb-0 ms-2">60 seats</p>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <div class="c_item ">
+              <div class="c_img">
+                <img src="images/course-1.png" alt="Course one">
+              </div>
+              <h2>Modern Psychology</h2>
+              <p>Designation</p>
+              <a href="#" class="btn buy_btn">Buy course</a>
+              <div class="c_footer align-items-center">
+                <div class="date float-start">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <img src="images/calender.png" class="img-fluid" alt="calendar">
+                    </li>
+                    <li class="list-inline-item">
+                      <span>Start 20 April, 2021</span>
+                    </li>
+                  </ul>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="card shadow p-3 mb-5 bg-body rounded">
-                      <img src="images/course-2.png" class="card-img-top" alt="Course one">
-                      <div class="card-body ps-0">
-                        <h4>Modern Psychology</h4>
-                        <p class="card-text">Designation</p>
-                        <button class="btn green_btn">Buy Course</button>
-                      </div>
-                      <div class="card-footer ps-0 border-0 bg-white">
-                        <div class="d-flex justify-content-between">
-                            <div class="left-content d-flex">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewBox="0 0 16 16">
-                                  <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
-                                  <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-                                </svg>
-                                <p class="mb-0 ms-2">Start 20  April, 2021</p>
-                            </div>
-                            <div class="right-content d-flex">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
-                                  <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
-                                </svg>
-                                <p class="mb-0 ms-2">60 seats</p>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
+                <div class="seat float-end">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <img src="images/group.png" class="img-fluid" alt="calendar">
+                    </li>
+                    <li class="list-inline-item">
+                      <span>60 Seats</span>
+                    </li>
+                  </ul>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="card shadow p-3 mb-5 bg-body rounded">
-                      <img src="images/course-3.png" class="card-img-top" alt="Course one">
-                      <div class="card-body ps-0">
-                        <h4>Modern Psychology</h4>
-                        <p class="card-text">Designation</p>
-                        <button class="btn green_btn">Buy Course</button>
-                      </div>
-                      <div class="card-footer ps-0 border-0 bg-white">
-                        <div class="d-flex justify-content-between">
-                            <div class="left-content d-flex">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewBox="0 0 16 16">
-                                  <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
-                                  <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-                                </svg>
-                                <p class="mb-0 ms-2">Start 20  April, 2021</p>
-                            </div>
-                            <div class="right-content d-flex">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
-                                  <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
-                                </svg>
-                                <p class="mb-0 ms-2">60 seats</p>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
-                </div>
+              </div>
             </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="c_item ">
+              <div class="c_img">
+                <img src="images/course-2.png" alt="Course two">
+              </div>
+              <h2>Modern Psychology</h2>
+              <p>Designation</p>
+              <a href="#" class="btn buy_btn ">Buy course</a>
+              <div class="c_footer align-items-center">
+                <div class="date float-start">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <img src="images/calender.png" class="img-fluid" alt="calendar">
+                    </li>
+                    <li class="list-inline-item">
+                      <span>Start 20 April, 2021</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="seat float-end">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <img src="images/group.png" class="img-fluid" alt="calendar">
+                    </li>
+                    <li class="list-inline-item">
+                      <span>60 Seats</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="c_item ">
+              <div class="c_img">
+                <img src="images/course-3.png" alt="Course Three">
+              </div>
+              <h2>Modern Psychology</h2>
+              <p>Designation</p>
+              <a href="#" class="btn buy_btn">Buy course</a>
+              <div class="c_footer align-items-center">
+                <div class="date float-start">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <img src="images/calender.png" class="img-fluid" alt="calendar">
+                    </li>
+                    <li class="list-inline-item">
+                      <span>Start 20 April, 2021</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="seat float-end">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <img src="images/group.png" class="img-fluid" alt="calendar">
+                    </li>
+                    <li class="list-inline-item">
+                      <span>60 Seats</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
     <section class="testimonial py-4 mb-4">
         <div class="container">
