--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col-lg-6 offset-lg-1 order-lg-2 order-1">
                     <div class="b-img">
-                        <img src="images/header.png" class="img-fluid" alt="intro image">
+                        <img src="images/hero-img.png" class="img-fluid" alt="intro image">
                     </div>
                 </div>
             </div>
@@ -248,10 +248,10 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-12 col-sm-6 col-12">
+                <div class="col-lg-3 col-md-12 col-sm-6 col-6">
                     <p class="footer-para">Millions of people of all ages and from around the world are improving their lives with us</p>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6">
                     <h4 class="footer-title">Course</h4>
                     <ul>
                         <li><a href="#">Graphic Design</a></li>
@@ -261,7 +261,7 @@
                         <li><a href="#">Engineering</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6">
                     <h4 class="footer-title">Terms</h4>
                     <ul>
                         <li><a href="#">Graphic Design</a></li>
@@ -271,7 +271,7 @@
                         <li><a href="#">Engineering</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6">
                     <h4 class="footer-title">Useful Link</h4>
                     <ul>
                         <li><a href="#">Graphic Design</a></li>
@@ -283,8 +283,8 @@
                 </div>
             </div>
             <div class="row mt-2">
-                <div class="col-12 d-flex justify-content-center">
-                    <p class="copy">Copyright &copy; Aklima akther ruhina 2022 www.com</p>
+                <div class="col-12 d-flex justify-content-center text-center">
+                    <p class="copy">Copyright &copy; Aklima akther ruhina 2022</p>
                 </div>
             </div>
         </div>
@@ -292,3 +292,4 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
+
